white space issue

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -17,6 +17,7 @@ $bp-largest: 106em;  // 1700px
     margin: 0;
     padding: 0;
     box-sizing: inherit;
+    width: 100%;
     overflow-x: hidden;
 }
 
